--- a/index.html
+++ b/index.html
@@ -11,50 +11,53 @@
 </head>
 
 <body>
-    <header>
+    <div class="background">
+        <header>
 
-        <div class="block-letter">
-            <h1 class="letter">BR</h1>
-        </div>
-
-        <div class="navigator">
-            <a href="menu">menu</a>
-            <a href="stories">top stories</a>
-            <a href="favorities">favorities</a>
-        </div>
-
-    </header>
-    <div class="content">
-        <div class="grey">
-            <div class="grey_text">
-                <div class="grey_1">
-                    <h2>GREAT EXPECTATIONS</h2>
-                </div>
-                <div class="grey_2">
-                    <p>NOVEL</p>
-                </div>
+            <div class="block-letter">
+                <h1 class="letter">BR</h1>
             </div>
 
-            <div class="white">
-                <div class="white_text">
-                    <h4>Chapter 1</h4>
-                    <br>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quia excepturi cumque commodi
-                        expedita illum atque laudantium earum molestias esse?
+            <div class="navigator">
+                <a href="menu">menu</a>
+                <a href="stories">top stories</a>
+                <a href="favorities">favorities</a>
+            </div>
+
+        </header>
+        <div class="content">
+            <div class="grey">
+                <div class="grey_text">
+                    <div class="grey_1">
+                        <h2>GREAT EXPECTATIONS</h2>
+                    </div>
+                    <div class="grey_2">
+                        <p>NOVEL</p>
+                    </div>
+                </div>
+
+                <div class="white">
+                    <div class="white_text">
+                        <h4>Chapter 1</h4>
+                        <br>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quia excepturi cumque
+                            commodi
+                            expedita illum atque laudantium earum molestias esse?
+                        </p>
+                        <button class="bt-1">READ THE BOOK</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="red">
+
+                    <img class="foto" src="./Image/akis.png" alt="foto"> <br>
+                    <span>&starf;&starf;&starf;&starf;&starf;</span>
+                    <p><strong>"</strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sequi velit
+                        cupiditate!<strong>"</strong>
                     </p>
-                    <button class="bt-1">READ THE BOOK</button>
-                    </a>
+                    <button class="bt-2">DONATE</button>
+
                 </div>
-            </div>
-            <div class="red">
-
-                <img class="foto" src="./Image/akis.png" alt="foto"> <br>
-                <span>&starf;&starf;&starf;&starf;&starf;</span>
-                <p><strong>"</strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sequi velit
-                    cupiditate!<strong>"</strong>
-                </p>
-                <button class="bt-2">DONATE</button>
-
             </div>
         </div>
     </div>
